Change API/MCP REST to work with identifier
